# GlassBoXAI-GNN

./: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json  pyproject.toml  readmeinfo.md
csharp/GnnFacadeCuda/: GnnFacade.cs  GnnFacadeCuda.csproj  NativeMethods.cs
csharp/example/: Program.cs  example.csproj
go/example/: go.mod  main.go
go/gnn/: gnn.go  gnn_test.go  go.mod
gui/: build.rs
gui/kani_proofs/src/: lib.rs
gui/src/: gnn_bridge.rs  gnn_facade.rs  main.rs
include/: gnn_facade.h  gnn_facade.hpp
julia/GnnFacadeCuda/: Project.toml  README.md
julia/GnnFacadeCuda/src/: GnnFacadeCuda.jl
julia/GnnFacadeCuda/test/: runtests.jl
kani_proofs/: README.md
kani_proofs/src/: lib.rs
python/gnn_facade_cuda/: __init__.py  __init__.pyi
src/: ffi.rs  lib.rs  main.rs  nodejs.rs  opencl.rs  python.rs
src/kani/: bounds_checks.rs  constant_time.rs  deadlock_free.rs  division_by_zero.rs  enum_exhaustion.rs  ffi_c_boundary.rs  ffi_cuda.rs  ffi_cuda_boundary.rs  ffi_opencl.rs  ffi_opencl_boundary.rs  floating_point.rs  input_sanitization.rs  integer_overflow.rs  memory_leaks.rs  mod.rs  no_panic.rs  pointer_validity.rs  resource_limits.rs  result_coverage.rs  state_consistency.rs  state_machine.rs
zig/: build.zig  build.zig.zon
zig/example/: main.zig
zig/src/: gnn.zig
